--- a/src/main/resources/templates/yamabiko.html
+++ b/src/main/resources/templates/yamabiko.html
@@ -31,8 +31,8 @@
     </th:block>
 
     <form th:action="@{/yamabiko/reduce}" method="post">
-      <label for="yamabikomessage">メッセージ:</label>
-      <input type="text" id="yamabikomessage" name="yamabiko" required>
+      <label for="reducemessage">メッセージ:</label>
+      <input type="text" id="reducemessage" name="reduce" required>
       <button type="submit">声を出す</button>
     </form>
   </section>
